src/z80asm/z80asm2/t/20-preproc/expected/defgroup_05.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/defgroup_05.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/defgroup_05.asm...
t/20-preproc/input/defgroup_05.asm:4:15: error: Unterminated expression after "*"
        var2 = 1+2*
                  ^
# file: t/20-preproc/input/defgroup_05.asm
EndOfLine	"\n"	7:1	
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
